syntax = "proto3"; 

package greet;
option go_package = "greet/greetpb";

// model
message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// request
message GreetRequest {
    Greeting greeting = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message LongGreetingRequest {
    Greeting greeting = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

// response
message GreetResponse {
    string result = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetingResponse {
    string result = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

message SquareRootResponse {
    double result = 1;
}

service GreetService{
    // unary
    rpc Greet(GreetRequest) returns (GreetResponse) {}

    // server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}

    // client streaming
    rpc LongGreeting(stream LongGreetingRequest) returns (LongGreetingResponse) {}

    // bi directional streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}

    // error handling
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}
}
